--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!-- PageHelper -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.5</version>
+        </dependency>
     </dependencies>
 
     <build>
