啟用 Spring Security plug in
新增 security 相關基礎檔案

--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
             <artifactId>pagehelper-spring-boot-starter</artifactId>
             <version>1.2.5</version>
         </dependency>
+
+        <!-- Spring Security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>2.3.9.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
