--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,12 @@
             <artifactId>spring-boot-starter-security</artifactId>
             <version>2.3.9.RELEASE</version>
         </dependency>
+
+        <!-- thymeleaf spring security 5 -->
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
