新增前後端線上刷卡功能
1. 使用 Stripe plig in
2. 更新 application.yml-sample
3. 後端 code 整理

--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,13 @@
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang3.version}</version>
         </dependency>
+
+        <!-- Stripe -->
+        <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>20.46.0</version>
+        </dependency>
     </dependencies>
 
     <build>
