--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,18 @@
             <artifactId>stripe-java</artifactId>
             <version>20.46.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
+
+        <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-oauth2-jose</artifactId>
+        <version>5.3.4.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
